--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-    "name": "color-accessibility-checker",
-    "version": "1.0.0",
-    "description": "A Figma widget to check color accessibility",
-    "main": "dist/code.js",
-    "scripts": {
-        "build": "tsc -p tsconfig.json",
-        "watch": "tsc -p tsconfig.json --watch"
-    },
-    "keywords": [
-        "figma",
-        "widget",
-        "accessibility"
-    ],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "typescript": "^5.0.0",
-        "@figma/plugin-typings": "*"
-    }
+  "name": "color-accessibility-checker",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.4"
+  }
 }
