--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,7 @@
 {
-    "compilerOptions": {
-        "target": "es6",
-        "lib": [
-            "es6",
-            "dom"
-        ],
-        "strict": true,
-        "typeRoots": [
-            "./node_modules/@types",
-            "./node_modules/@figma"
-        ],
-        "jsx": "react",
-        "jsxFactory": "widget.h",
-        "jsxFragmentFactory": "widget.Fragment",
-        "outDir": "./dist",
-        "rootDir": "./src",
-        "skipLibCheck": true
-    },
-    "include": [
-        "src/**/*.ts",
-        "src/**/*.tsx"
-    ]
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ]
 }
