--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -17,10 +17,14 @@
     "author": "Criszoraid",
     "license": "MIT",
     "dependencies": {
-        "@modelcontextprotocol/sdk": "^1.0.4"
+        "@modelcontextprotocol/sdk": "^1.0.4",
+        "express": "^4.18.2",
+        "cors": "^2.8.5"
     },
     "devDependencies": {
         "@types/node": "^22.0.0",
+        "@types/express": "^4.17.21",
+        "@types/cors": "^2.8.17",
         "typescript": "^5.0.0"
     }
 }
